--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ body {
 <title> aint.works </title> 
 </head>
 <body> 
-<div align="center"><h2>aint.works</h2><br><img src="cat.jpeg"></div>
+<div align="center"><h2>AINT</h2><br /><img src="cat.jpeg"></div>
 </body>
 </html>
