--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ body {
 <title> aint.works </title> 
 </head>
 <body> 
-<div align="center"><h2>AINT</h2><br /><img src="/cat.jpeg"></div>
-</body>
+	<div height="100vh">
+		<div align="center" style="vertical-align:middle;">
+			<h2>AINT</h2><br /><img src="/cat.jpeg"><br /><a href="https://www.instagram.com/samaintsaint/">instant engram</a>
+		</div>
+	</div> 
+	</body>
 </html>
