--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@ body {
 <body> 
 	<div height="100vh">
 		<div align="center" style="vertical-align:middle;">
-			<h2>AINT</h2><br /><img src="/cat.jpeg"><br /><a href="https://www.instagram.com/samaintsaint/">instant engram</a>
+			<h2>AINT</h2><br /><img src="/cat.jpeg"><br />
 		</div>
+	<div><p>So, being a diligent investigator, you follow through. 
+
+		There’s nothing to look at. 
+		There’s nothing to be interested in. 
+		Except for th<a href="https://www.instagram.com/samaintsaint/">i</a>s cat.
+
+		Yet you believe there is, and your own cat is looking weird at ya. 
+
+		But there isn’t. Save for a shimmering thought that curiosity has to be rewarded with a result. Or maybe a hint. 
+
+		So, how about this: 
+
+		There is no satisfaction of your curiosity in whatever you may ever see here. What you’re actually looking for is what brought you here. 
+
+		Now, rest. </p>
 	</div> 
 	</body>
 </html>
