--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@ body {
 		<div align="center" style="vertical-align:middle;">
 			<h2>AINT</h2><br /><img src="/cat.jpeg"><br />
 		</div>
-	<div><p>So, being a diligent investigator, you follow through. 
+	<div><p>So, being a diligent investigator, you follow through.<br /><br />
 
-		There’s nothing to look at. 
-		There’s nothing to be interested in. 
-		Except for th<a href="https://www.instagram.com/samaintsaint/">i</a>s cat.
+		There’s nothing to look at. <br />
+		There’s nothing to be interested in.<br /> 
+		Except for th<a href="https://www.instagram.com/samaintsaint/">i</a>s cat.<br /><br />
 
-		Yet you believe there is, and your own cat is looking weird at ya. 
+		Yet you believe there is, and your own cat is looking weird at ya. <br /><br />
 
-		But there isn’t. Save for a shimmering thought that curiosity has to be rewarded with a result. Or maybe a hint. 
+		But there isn’t. Save for a shimmering thought that curiosity has to be rewarded with a result. Or maybe a hint. <br /><br />
 
-		So, how about this: 
+		So, how about this: <br /><br />
 
-		There is no satisfaction of your curiosity in whatever you may ever see here. What you’re actually looking for is what brought you here. 
+		There is no satisfaction of your curiosity in whatever you may ever see here. What you’re actually looking for is what brought you here. <br />
 
 		Now, rest. </p>
 	</div> 
