--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@ body {
 	line-height: 1.5;
 	font-size: 17px;
 }
+	
+a:link, a:visited,a:active { 
+  color: #eee;
+} 
+	
+a:hover {
+  color: #000;
+  background-color:#fff;
+}
+	
+	
 </style>
 <title> aint.works </title> 
 </head>
