--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ a:hover {
 <body> 
 	<div height="100vh">
 		<div align="center" style="vertical-align:middle;">
-			<h2>AINT</h2><br /><img src="/cat.jpeg"><br />
-	<div><p>So, being a diligent investigator, you follow through.<br /><br />
+			<img src="/cat.jpeg"><br />
+	<div><h2>AINT</h2><br /><p>So, being a diligent investigator, you follow through.<br /><br />
 
 		There’s nothing to look at. <br />
 		There’s nothing to be interested in.<br /> 
