--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:hover {
 
 		So, how about this: <br /><br />
 
-		There is no satisfaction of your curiosity in whatever you may ever see here. What you’re actually looking for is what brought you here. <br />
+		There is no satisfaction of your curiosity in whatever you may ever see here. What you’re actually looking for is what brought you here. <br /> <br />
 
 		Now, rest. </p>
 	</div> 
