--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ a:hover {
 	<div height="100vh">
 		<div align="center" style="vertical-align:middle;">
 			<img src="/cat.jpeg"><br />
-	<div><h2>AINT</h2><br /><p>So, being a diligent investigator, you follow through.<br /><br />
+	<div><h2>AINT</h2><br /><p align="left">So, being a diligent investigator, you follow through.<br /><br />
 
 		There’s nothing to look at. <br />
 		There’s nothing to be interested in.<br /> 
