--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ a:hover {
 	<div height="100vh">
 		<div align="center" style="vertical-align:middle;">
 			<img src="/cat.jpeg"><br />
-	<div><h2>AINT</h2><br /><p align="left">So, being a diligent investigator, you follow through.<br /><br />
+			<h2>AINT</h2><br /><p align="left">So, being a diligent investigator, you follow through.<br /><br />
 
 		There’s nothing to look at. <br />
 		There’s nothing to be interested in.<br /> 
@@ -44,7 +44,6 @@ a:hover {
 		There is no satisfaction of your curiosity in whatever you may ever see here. What you’re actually looking for is what brought you here. <br /> <br />
 
 		Now, rest. </p>
-	</div> 
 	</div>				
 	</body>
 </html>
