--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ a:hover {
 	<div height="100vh">
 		<div align="center" style="vertical-align:middle;">
 			<img src="/cat.jpeg"><br />
-			<h2>AINT</h2><br /><p align="left">So, being a diligent investigator, you follow through.<br /><br />
-
+			<h2>AINT</h2><br /><p>So, being a diligent investigator, you follow through.<br /><br />
+	
 		There’s nothing to look at. <br />
 		There’s nothing to be interested in.<br /> 
 		Except for th<a href="https://www.instagram.com/samaintsaint/">i</a>s cat.<br /><br />
 
-		Yet you believe there is, and your own cat is looking weird at ya. <br /><br />
+		Yet you believe there is, and your own cat is hissing all weird at ya. <br /><br />
 
 		But there isn’t. Save for a shimmering thought that curiosity has to be rewarded with a result. Or maybe a hint. <br /><br />
 
