--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@ a:hover {
   color: #000;
   background-color:#fff;
 }
+
+p {
+  border-bottom:1px dotted;
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  width: 600px; 
+}  	
 	
 	
 </style>
