--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@ a:hover {
 }
 
 p {
-  border-bottom:1px dotted;
   margin-left:auto;
   margin-right:auto;
-  text-align:center;
+  text-align:left;
   width: 600px; 
 }  	
 	
